--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,28 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>
-            歡迎光臨我的部落格
-        </title>
-    </head>
-    <body>
-        <h1>歡迎光臨我的部落格</h1>
-        <hr>
-        {% for post in posts %}
-            <p style="font-family: 微軟正黑體;font-size: 16pt;font-weight: bold;">
-                <a href="/post/{{post.slug}}">{{ post.title}}</a>
+<!-- index.html -->
+{% extends 'base.html' %}
+{% block title %} 歡迎光臨我的部落格 {% endblock %}
+{% block headmessage %}
+    <h3 style="font-family: 標楷體;">本站文章列表</h3>
+{% endblock %}
+{% block content %}
+    {% for post in posts %}
+    <div class="card">
+        <div class="card-header">
+            <p style="font-family: 微軟正黑體;font-size: 14pt;font-weight: bold;">
+                <a href="/post/{{post.slug}}">{{ post.title }}</a>
             </p>
-        {% endfor %}
-        <hr>
-        <h3>現在時刻：{{ now }}</h3>
-    </body>
-</html>
+        </div>
+        <div class="card-body" style="background-color: #ffffdd;">
+            <p>
+                {{ post.body | truncatechars:40 }}
+            </p>
+        </div>
+        <div class="card-footer" style="background-color: #efefef;">
+            <p>
+                發佈時間：{{ post.pub_date | date:"Y M d, h:m:s" }}
+            </p>
+        </div>
+    </div>
+    <br>
+    {% endfor %}
+{% endblock %}
